# quadratic_mpc

./: CMakeLists.txt
cmake/: Config.cmake.in
include/quadratic_mpc/: quadratic_mpc.hpp
src/: main.cpp  quadratic_mpc.cpp
